ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-mining
spec:
  rules:
    - host: front-<ip>.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloud-mining-frontend-service
                port:
                  number: 80
    - host: api-<ip>.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloud-mining-backend-service
                port:
                  number: 80
